package wonders.actions;

public interface Talkable {
    public void Talk(String speech);
}
