package wonders.actions;

public interface Cookable {
    public void Cook();
}
