package wonders.actions;

public interface Grinable {
    public void Grin();
}
