package wonders.actions;

public interface Walkable {
    public void Walk(String whom);
}
